--- a/templates/index.html
+++ b/templates/index.html
@@ -9,5 +9,18 @@
 {% endblock %}
 
 {% block conteudo %}
+    <div class="hero-left">
+        <h1>Ideias que conectam. Projetos que transformam.</h1>
+        <p>Um portal para explorar, divulgar, e se inspirar com os projetos do IF.</p>
+        <button>Explorar Projetos</button>
+    </div>
+
+    <div class="hero-rigth">
+        <img src="" alt="Imagem Hero"> <!-- imagem do cabecario-->
+    </div> 
+
+{% endblock %}
+
+{% block conteudo %}
     <p>Este é o conteúdo da página inicial.</p>
 {% endblock %}
