--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
             IFnexus
         {% endblock %}
     </title>
+    {% block estilos %}{% endblock %}
 </head>
 <body style="background-color: rgb(196, 196, 196);">
 
