--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% block estilos %}{% endblock %}
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
 </head>
-<body style="background-color: rgb(196, 196, 196);">
+<body style="background-color: #F2F2F2;">
 
     <header>
         <h1 href="/" class="home">Nexus IF</h1> <!-- a ser substituido pela img -->
