--- a/templates/_card.html
+++ b/templates/_card.html
@@ -1,5 +1,10 @@
+<link rel="stylesheet" href="static/css/card.css">
+
 <div class="card">
     <img src="{{ card.imagem }}" alt="Imagem do {{ card.titulo }}">
+    <div class="tag">
+        <p>{{ card.tag }}</p>
+    </div>
     <h3>{{ card.titulo }}</h3>
     <p>{{ card.descricao }}</p>
     <a href="#">Saiba mais</a>
