--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body style="background-color: #F2F2F2;">
 
     <header>
-        <h1 href="/" class="home">Nexus IF</h1> <!-- a ser substituido pela img -->
+        <h1 href="/" class="home">IFNexus</h1> <!-- a ser substituido pela img -->
             
         <div class="botoes">
             {% if session.usuario %}
