--- a/templates/_card.html
+++ b/templates/_card.html
@@ -1,11 +1,17 @@
 <link rel="stylesheet" href="static/css/card.css">
 
 <div class="card">
-    <img src="{{ card.imagem }}" alt="Imagem do {{ card.titulo }}">
-    <div class="tag">
-        <p>{{ card.tag }}</p>
+    <div class="imgcard">
+        <!--<img src="{{ card.imagem }}" alt="Imagem do {{ card.titulo }}"> ativaremos aq dps-->
     </div>
-    <h3>{{ card.titulo }}</h3>
-    <p>{{ card.descricao }}</p>
-    <a href="#">Saiba mais</a>
+    <div class="content">
+        <div class="tag">
+            <p>{{ card.tag }}</p>
+        </div>
+        <h3>{{ card.titulo }}</h3>
+        <p>{{ card.descricao }}</p>
+        <div class="saibamais">
+            <a href="#">Saiba mais</a>
+        </div>
+    </div>
 </div>
