--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Bem-vindo ao Nexus IF!{% endblock %}
+{% block title %}Bem-vindo ao IFNexus!{% endblock %}
 
 {% block estilos %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}">
