--- a/templates/register.html
+++ b/templates/register.html
@@ -4,23 +4,33 @@
     Cadastro
 {% endblock %}
 
-{% block pagina %}
-    Cadastro
+{% block estilos %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/register.css') }}">
 {% endblock %}
 
 {% block conteudo %}
 
 {% include 'componentes/erro.html' %}
 
-<form action="{{ url_for('register') }}" method="post">
-    <input type="text" name="email" placeholder="Email">
-    <input type="password" name="senha" placeholder="Senha">
-    <button>Cadastrar</button>
+<div class="main">
+    <form action="{{ url_for('register') }}" method="post">
+        <div class="logo">
+            <h1>IFNexus</h1>
+            <img src="" alt="">
+        </div>
+        <p>Crie sua conta e faça parte do IFNexus.</p>
+        <input type="text" name="nome" id="Nome" placeholder="Nome">
+        <input type="text" name="email" placeholder="Email">
+        <input type="password" name="senha" placeholder="Senha">
+        <input type="password" name="senhaconfirmada" placeholder="Confirmar Senha">
+        <button>Cadastrar</button>
 </form>
 
-<p>
-    Já tem uma conta? 
-    <a href="{{ url_for('login') }}">Conecte-se</a>
-</p>
+<div class="aside">
+    <p>
+        Já tem uma conta? 
+        <a href="{{ url_for('login') }}">Conecte-se</a>
+    </p>
+</div>
 
 {% endblock %}
