--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                     <a href="/" class="Incio">Início</a>
                     <a href="/" class="Projetos">Projetos</a>
                     <a href="/" class="Sobre">Sobre</a>
-                    <a href="/" class="Login">Login</a>
+                    <a href="/login" class="Login">Login</a>
                 </nav>
             {% endif %}
         </div>
