--- a/templates/componentes/erro.html
+++ b/templates/componentes/erro.html
@@ -1,1 +1,8 @@
-e
+{% with errors = get_flashed_messages(category_filter=['error'])  %}
+{% if errors %}
+{% for msg in errors %}
+<!-- colocar cor vermelha -->
+<span style="color: red">{{msg}}</span>
+{% endfor %}
+{% endif %}
+{% endwith %}
